--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@infini-ui/react-add-to-calendar",
-  "version": "0.1.14",
-  "main": "src/infini-react-add-to-calendar.tsx",
+  "version": "0.1.37",
+  "main": "dist/infini-react-add-to-calendar.js",
   "types": "decs.d.ts",
   "scripts": {
     "start": "webpack serve",
@@ -19,7 +19,8 @@
     "build:types": "tsc",
     "storybook": "concurrently --kill-others \"npx tailwindcss -i ./src/styles/tailwinds.css -o ./dist/infini-ui.tailwind.css --watch\" \"storybook dev -p 6006\"",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic"
+    "chromatic": "npx chromatic",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -39,17 +40,16 @@
     "@storybook/react-webpack5": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
     "@storybook/theming": "^7.2.3",
-    "@svgr/webpack": "^8.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^12.1.5",
+    "@types/classnames": "^2.3.1",
     "@types/color": "^3.0.3",
     "@types/testing-library__jest-dom": "^5.14.9",
     "babel-jest": "^27.5.1",
     "chromatic": "^6.23.0",
-    "classnames": "^2.3.2",
     "color": "^4.2.3",
     "concurrently": "^6.5.1",
     "cross-env": "^7.0.3",
@@ -71,18 +71,13 @@
     "svg-react-loader": "^0.4.6",
     "tailwindcss": "^3.3.3",
     "tailwindcss-children": "^2.1.0",
-    "ts-config-single-spa": "^3.0.0",
     "ts-loader": "^9.5.0",
     "typescript": "^4.9.5",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^4.10.0",
-    "webpack-config-single-spa-react": "^4.0.4",
-    "webpack-config-single-spa-react-ts": "^4.0.4",
-    "webpack-config-single-spa-ts": "^4.1.3",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "storybook-tailwind-dark-mode": "^1.0.22"
   },
   "dependencies": {
     "@types/react": "^17.0.65",
@@ -91,12 +86,10 @@
     "@types/webpack-env": "^1.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-is": "^18.2.0",
-    "react-spring": "^9.7.2",
-    "single-spa": "^5.9.5",
-    "single-spa-react": "^5.1.4",
-    "storybook-tailwind-dark-mode": "^1.0.22",
+    "react-is": "^18.2.0"
+  },
+  "peerDependencies" : {
+    "classnames": "^2.3.2",
     "tailwind-merge": "^1.14.0"
   },
   "repository": {
