--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@infini-ui/react-add-to-calendar",
-  "version": "0.1.37",
+  "description": "Customizable react button component",
+  "author": "Drew Stephenson",
+  "version": "0.1.55",
   "main": "dist/infini-react-add-to-calendar.js",
+  "module": "dist/infini-react-add-to-calendar.js",
   "types": "decs.d.ts",
+  "private": false,
   "scripts": {
     "start": "webpack serve",
     "start:standalone": "webpack serve --env standalone",
@@ -47,6 +51,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@types/classnames": "^2.3.1",
     "@types/color": "^3.0.3",
+    "@types/react": "^17.0.65",
+    "@types/react-dom": "^17.0.20",
     "@types/testing-library__jest-dom": "^5.14.9",
     "babel-jest": "^27.5.1",
     "chromatic": "^6.23.0",
@@ -65,9 +71,13 @@
     "path": "^0.12.7",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-svg": "^16.1.21",
     "storybook": "^7.3.2",
     "storybook-addon-themes": "^6.1.0",
+    "storybook-tailwind-dark-mode": "^1.0.22",
     "svg-react-loader": "^0.4.6",
     "tailwindcss": "^3.3.3",
     "tailwindcss-children": "^2.1.0",
@@ -76,23 +86,23 @@
     "webpack": "^5.88.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0",
-    "storybook-tailwind-dark-mode": "^1.0.22"
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "@types/react": "^17.0.65",
-    "@types/react-dom": "^17.0.20",
     "@types/systemjs": "^6.13.2",
-    "@types/webpack-env": "^1.18.1",
+    "@types/webpack-env": "^1.18.1"
+  },
+  "peerDependencies": {
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0"
-  },
-  "peerDependencies" : {
-    "classnames": "^2.3.2",
+    "react-is": "^18.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "repository": {
+    "type": "git",
     "url": "git://github.com/Drewskee/react-add-to-calendar.git"
   },
   "eslintConfig": {
