--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "useDefineForClassFields": true,
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "sourceMap": true,
