--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.10",
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
-    "@storybook/addon-styling": "^1.3.6",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/addon-links": "^7.5.1",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.3.2",
     "@storybook/manager-api": "^7.2.3",
     "@storybook/react": "^7.3.2",
@@ -90,8 +90,10 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "@storybook/addon-designs": "^7.0.5",
     "@types/systemjs": "^6.13.2",
-    "@types/webpack-env": "^1.18.1"
+    "@types/webpack-env": "^1.18.1",
+    "save-dev": "^0.0.1-security"
   },
   "peerDependencies": {
     "@types/react": "^18.2.31",
