--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@infini-ui/react-add-to-calendar",
   "description": "Customizable react button component",
   "author": "Drew Stephenson",
-  "version": "0.1.72",
+  "version": "0.1.73",
   "main": "dist/infini-react-add-to-calendar.js",
   "module": "dist/infini-react-add-to-calendar.js",
   "types": "decs.d.ts",
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@babel/runtime": "^7.22.10",
+    "@storybook/addon-designs": "^7.0.5",
     "@storybook/addon-essentials": "^7.5.1",
     "@storybook/addon-interactions": "^7.5.1",
     "@storybook/addon-links": "^7.5.1",
@@ -90,10 +91,8 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
-    "@storybook/addon-designs": "^7.0.5",
     "@types/systemjs": "^6.13.2",
-    "@types/webpack-env": "^1.18.1",
-    "save-dev": "^0.0.1-security"
+    "@types/webpack-env": "^1.18.1"
   },
   "peerDependencies": {
     "@types/react": "^18.2.31",
