fixing favico and stories

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Brickburst",
-  "name": "A strategy speed game with style",
+  "short_name": "Infini-UI",
+  "name": "A UI Lib Kit soon to be filled!",
   "icons": [
     {
       "src": "/favicon/android-chrome-192x192.png",
